# snake

./: CMakeLists.txt  README.md
include/: ball.hpp  game.hpp  object.hpp  snake.hpp  window.hpp
src/: CMakeLists.txt  ball.cpp  game.cpp  main.cpp  snake.cpp  window.cpp
